D       templates_surfaces/rh.central.freesurfer.gii
A  +    templates_surfaces/rh.inflated.Template_T1_IXI555_MNI152.gii
D       templates_surfaces/rh.inflated.gii
D       templates_surfaces/rh.s1template.IXI555.gii
D       templates_surfaces/rh.s32template.IXI555.gii

(1) Removed templates_surfaces/?h.central.freesurfer.gii and 
    templates_surfaces/?h.s1template.IXI555.gii.
(2) Renamed templates_surfaces/?h.s32template.IXI555.gii to
    templates_surfaces/?h.inflated.Template_T1_IXI555_MNI152.gii
------------------------------------------------------------------------
r719 | gaser | 2015-09-07 15:38:00

M       CHANGES.txt
M       cg_vbm_write.m

Corrected bug in cg_vbm_write.m if strength of NLM-filter was set to 0.
------------------------------------------------------------------------
r720 | gaser | 2015-09-07 15:46:06

M       CHANGES.txt
M       cg_vbm_write.m
M       html/vbm12.html

Corrected bug in cg_vbm_write.m whwre relative volume was not correctly printed.

------------------------------------------------------------------------
r721 | gaser | 2015-09-10 14:50:20

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_stools.m
M       cg_vbm_tools.m
M       vbm12.fig
M       vbm_io_xml.m
M       vbm_surf_vol2surf.m

(1) Some cosmetic changes to vbm_surf_vol2surf.m and vbm_io_xml.m
    and cg_vbm_longitudinal_multi.
(2) Renamed longitudinal batch to prevent confucion with spm12 tool for
    longitudinal registration.
(3) Changed and corrected some ufilters in cg_vbm_stools.m.
(4) Changed cg_vbm_longitudinal.m accoring to (3).

------------------------------------------------------------------------
r722 | gaser | 2015-09-11 17:36:22

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       tbx_cfg_vbm.m

Some cosmetic changes to cg_vbm_longitudinal.m and tbx_cfg_vbm.m.

------------------------------------------------------------------------
r723 | gaser | 2015-09-11 18:11:03